--- a/trunk/efc/AndroidManifest.xml
+++ b/trunk/efc/AndroidManifest.xml
@@ -29,5 +29,5 @@
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    
+    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
 </manifest> 
